--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #909090;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,7 +18,15 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: black;
+  background: white;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.grid-cols-3 {
+  & > div {
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+  }
 }
