--- a/app/globals.css
+++ b/app/globals.css
@@ -19,14 +19,30 @@
 
 body {
   color: black;
-  background: white;
+  background: #efefef;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid-cols-2 {
   & > div {
-    border: 1px solid black;
+    border: 1px solid #ccc;
+    background-color: white;
     padding: 10px;
     margin: 10px;
+    border-radius: 10px;
   }
+}
+
+table {
+  border-radius: 10px;
+  padding: 10px;
+  background-color: white;
+  margin: 10px;
+  td,th {
+    padding: 10px;
+  }
+}
+
+h2 {
+  font-size: 2rem;
 }
