--- a/app/globals.css
+++ b/app/globals.css
@@ -35,11 +35,9 @@ body {
 
 table {
   border-radius: 10px;
-  padding: 10px;
   background-color: white;
-  margin: 10px;
   td,th {
-    padding: 10px;
+    padding:5px 0;
   }
 }
 
