--- a/app/globals.css
+++ b/app/globals.css
@@ -27,12 +27,12 @@ h2 {
   font-size: 1.25rem;
 }
 
-.dashboard .grid > div {
-  background-color: white;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+a {
+  color: #0070f3;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 :root {
